<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/title_background"
        android:padding="1dp"
        android:text="@string/tabList" />


    <ListView
        android:id="@+id/lstTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/grpButtons"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtTitle" />

    <LinearLayout
        android:id="@+id/grpButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRestoreClosedTab"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/restoreClosedTab" />

        <Button
            android:id="@+id/btnAddNewTab"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/addNewTab" />

    </LinearLayout>

</RelativeLayout>