<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/grpWebViewContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/grpButtons"
        android:layout_alignParentStart="true"
        android:orientation="vertical" />


    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@color/layout_background"
        android:orientation="vertical"
        android:paddingStart="3dp"
        android:paddingTop="2dp"
        android:paddingEnd="3dp">

        <Button
            android:id="@+id/btnTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:gravity="start"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="0.3dp"
            android:text="@string/loading"
            android:textColor="@color/item_sub_text" />

        <EditText
            android:id="@+id/inputUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:inputType="textUri"
            android:padding="3dp"
            android:singleLine="true" />

        <LinearLayout
            android:id="@+id/grpEditPanel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btnClearUrl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="start"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/clear"
                android:textColor="@color/item_sub_text" />

            <Button
                android:id="@+id/btnPasteUrl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="start"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/paste"
                android:textColor="@color/item_sub_text" />

            <Button
                android:id="@+id/btnEnterUrl"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:gravity="start"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/enter"
                android:textColor="@color/item_sub_text" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/prgLoadingProgress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:progress="10" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/grpButtons"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnBack"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="◀" />

        <Button
            android:id="@+id/btnForward"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="▶" />

        <Button
            android:id="@+id/btnReload"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="↻" />

        <Button
            android:id="@+id/btnStop"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="✕"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnShare"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="S" />

        <Button
            android:id="@+id/btnBookmark"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="B"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnTab"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="0" />

        <Button
            android:id="@+id/btnMenu"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="…" />

    </LinearLayout>

</RelativeLayout>